# sysnet-scout

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  scout.cmd  scout.ps1  scout.sh  termux-setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/sysnet_scout/: cli.py  network_scanner.py  system_info.py
tests/: test_cli.py  test_network_scanner.py  test_system_info.py
