[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysnet-scout"
version = "1.0.0"
description = "Cross-platform system information and network scanner utility"
readme = "README.md"
authors = [
  { name = "pinkythegawd (MikePinku)" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
sysnet-scout = "sysnet_scout.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
